force-app/main/default/objects/Contact_premise__c/Contact_premise__c.object-meta.xml
<CustomObject>
    <label>Contact premise</label>
    <nameField>
        <label>C Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Contact premises</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>