force-app/main/default/objects/Contact_premise__c/fields/contact__c.field-meta.xml
<CustomField>
    <fullName>contact__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Premise</label>
    <referenceTo>Premise__c</referenceTo>
    <relationshipLabel>Contact premises</relationshipLabel>
    <relationshipName>Contact_premises</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>