force-app/main/default/objects/Contact_premise__c/fields/contact_details__c.field-meta.xml
<CustomField>
    <fullName>contact_details__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>contact details</label>
    <referenceTo>Premise__c</referenceTo>
    <relationshipLabel>Contact premises (contact details)</relationshipLabel>
    <relationshipName>Contact_premises1</relationshipName>
    <type>Lookup</type>
</CustomField>