force-app/main/default/objects/Contact_premise__c/fields/Premise_details__c.field-meta.xml
<CustomField>
    <fullName>Premise_details__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Premise details</label>
    <referenceTo>Premise__c</referenceTo>
    <relationshipLabel>Contact premises (Premise details)</relationshipLabel>
    <relationshipName>Contact_premises2</relationshipName>
    <type>Lookup</type>
</CustomField>